# NewGame

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  LICENSE  NewGame_test  mingw64.cmake  vs2015.cmake
docker/linux_build/: Dockerfile  build.bat  build.sh
docker/windows_build/mingw64/: Dockerfile  build.bat  build_project.bat  run.bat
docker/windows_build/vs2015/: Dockerfile  build.bat  run.bat
docker/windows_build/vs2015buildslave/: Dockerfile  build.bat  run.bat
docs/: classes.class.violet.html
src/: CMakeLists.txt  actor.h  actor_arena.cpp  actor_arena.h  bullet_actor.cpp  bullet_actor.h  collision.h  gameloop.cpp  gameloop.h  gameloopcontrol.h  gamepad.h  globals.h  level.h  level1.cpp  level1.h  level_transition.cpp  level_transition.h  logging.h  main.cpp  new_game.cpp  new_game.h  simple_actor.cpp  simple_actor.h  titlescreen.cpp  titlescreen.h
tests/: CMakeLists.txt  actor_collision_test.cpp
